Fix #1372 - disable pull-to-refresh on mobile browsers

--- a/ui/media/css/main.css
+++ b/ui/media/css/main.css
@@ -12,6 +12,7 @@ body {
     font-size: 11pt;
     background-color: var(--background-color1);
     color: var(--text-color);
+    overscroll-behavior-y: contain;
 }
 a {
     color: var(--link-color);
